# inline-citation-rag

./: .gitignore  README.md  articles.json  citation_cli.py  docker-compose.yml  pyproject.toml  setup.sh
