[project]
name = "inline-citation-demo"
version = "0.1.0"
description = "CLI tool for Q&A with inline citations using Qdrant and FastEmbed"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "qdrant-client>=1.7.0",
    "fastembed>=0.1.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]